deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazing
  labels:
    app: amazing-platform
